Add logical computers writeup

--- a/Logical Computers/logical computer.ipynb
+++ b/Logical Computers/logical computer.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grey{sM0rT_mAch1nE5}\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
